13 September 2005 Andreas Fabri
- Changes in Lazy.h such that the 2D kernel testsuite now passes (without transform)

13 September 2005 Sylvain Pion
- Protect_FPU_rounding : add expensive assertion.
- Lazy kernel : various updates/fixes.

12 September 2005 Sylvain Pion
- Workaround for g++ 3.3 (test for CGAL_CFG_COMMA_BUG).

12 September 2005 Sylvain Pion
- Lazy_exact_nt : change Interval<true> to Interval<false> for compatibility
  with Lazy_kernel.

7 September 2005 Andreas Fabri
- Added nested type Lazy_kernel::Kernel_tag
- The magic functor now returns Lazy_kernel::Class instead of Lazy<Class>

7 September 2005 Sylvain Pion
- Introduce nested type Protector in Interval_nt to access
  Protect_FPU_rounding easily.

12 August 2005 Sylvain Pion
- Move Kernel_checker to Kernel_23.

12 August 2005 Andreas Fabri & Sylvain Pion
- Lazy_kernel : Protect_FPU optimizations, fix empty Objects.

12 August 2005 Andreas Fabri
- Bug fix in Lazy_exact_nt.h: replaced access to former data member 'in' 
  with call to member function 'approx()'

12 August 2005 Sylvain Pion
- Move Same_certainty to Kernel_23/include/CGAL/Kernel/.

11 August 2005 Andreas Fabri
- Added a common base class for lazy numbers and lazy kernel classes
- Added an example for the lazy kernel
  and a kernel with a functor that writes result to an output iterator

9 August 2005 Sylvain Pion
- Uncertain : replace operator&& and || overloads by operator& and |,
  to keep the lazy evaluation.

9 August 2005 Sylvain Pion
- Fix workaround for enum_cast.

7 August 2005 Sylvain Pion
- Uncertain, enum_cast : workaround for CGAL_CFG_MATCHING_BUG_5.

6 August 2005 Sylvain Pion
- Uncertain : add overload for enum_cast.
- Interval_nt : add specializations for Equal_to, Greater.. returning Uncertain.
- Uncertain : add opposite(), Same_uncertainty, Same_uncertainty_nt
  ( tools to propagete uncertainty )

5 August 2005 Sylvain Pion
- Specialize functors Sgn, Compare, Is_zero... for Interval_nt so that they